feat: button to run functions

--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <head>
   <meta charset="utf-8">
   <title>WASM & JS triplet implementation</title>
-  <link rel="stylesheet" href="./src/css/styles/index.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" href="#">
   <script type="module" src="src/attacher.js "></script>
 </head>
 
 <body>
-  <input type="text" id="numbers" name="numbers" >
+  <input type="text" id="numbers" name="numbers">
+  <button id="calcButton">Calcular</button>
 </body>
