changes to algorithm.cpp

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title> T3 WASM </title>
   <meta charset=" UTF-8 ">
   <link rel="stylesheet" href="assets\style.css">
-
+  <script type="module" src="src\attacher.js"></script>
 </head>
 
 <body>
