--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title> T3 WASM </title>
     <meta charset=" UTF-8 ">
     <link rel="stylesheet" href="assets\style.css">
-
 </head>
 
 <body>
@@ -34,7 +33,7 @@
         </div>
     </div>
 
-    <script src='.\src\index.js' type="module"></script>
+    <script src='.\index.js' type="module"></script>
 
 </body>
 
