--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
             <div class="layer-card" id="layer-card">
                 <p>Canasta de Soluciones</p>
                 <hr>
+                <div id="resume">
+                    <div id="agent-info"></div>
+                    <div id="resume-solution"></div>
+                </div>
             </div>
         </div>
 
         <div class="right-column">
-            <div class="resume"></div>
             <div class="graph" id="third-task"></div>
         </div>
     </div>
